gccida/c1/output_init_element
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_init_element/src/c-typeck.c:6697:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_init_element/src/c-typeck.c:6699:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_init_element/src/c-typeck.c:6701:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_init_element/src/c-typeck.c:6702:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_init_element/src/c-typeck.c:6774:20: error: expected expression
v11 = ( tree_node *)v10; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_init_element/src/c-typeck.c:6774:9: error: use of undeclared identifier 'tree_node'
v11 = ( tree_node *)v10; 
        ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_init_element/src/obj/c-typeck.o] Error 1
